# iterator

./: .gitignore  .travis.yml  .travis_build.sh  README.md
iterator/: iterator.sln
iterator/iterator/: enumerate.h  grouped.h  iterator.h  iterator.vcxproj  iterator.vcxproj.filters
iterator/iterator_test/: enumerate_test.cpp  grouped_test.cpp  iterator_test.cpp  iterator_test.vcxproj  iterator_test.vcxproj.filters  stdafx.cpp  vector_test.cpp  vector_test.h
test/: CMakeLists.txt  test.cpp
